dz-1/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: api
  template:
    metadata:
      name: api
      labels:
        components: api
    spec:
      containers:
        - name: short-api
          image: antonlarichev/conv-api:1.0
          volumeMounts:
            - mountPath: /opt/app/uploads
              name: api-data
#          ports:
#            - containerPort: 80
          resources:
            limits:
              memory: "512Mi"
              cpu: "300m"
      volumes:
        - name: api-data
          persistentVolumeClaim:
            claimName: api-pvc
