dz-1/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: frontend
  template:
    metadata:
      name: app
      labels:
        components: frontend
    spec:
      containers:
        - name: short-app
          image: antonlarichev/conv-app:1.2
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "512Mi"
              cpu: "300m"
