dz-1/convservice-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: convservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: convservice
  template:
    metadata:
      name: convservice
      labels:
        components: convservice
    spec:
      containers:
        - name: short-api
          image: antonlarichev/conv-service:1.0
          ports:
            - containerPort: 4000
          resources:
            limits:
              memory: "512Mi"
              cpu: "300m"
