dz-1/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app
  labels:
    components: frontend
spec:
  containers:
    - name: short-app
      image: antonlarichev/conv-app:1.2
      ports:
        - containerPort: 80
      resources:
        limits:
          memory: "512Mi"
          cpu: "500m"
