dz-1/rmq-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: rabbitmq
  template:
    metadata:
      labels:
        components: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:4.0.5
          ports:
            - containerPort: 5672
          resources:
            limits:
              memory: "500Mi"
              cpu: "300m"
          volumeMounts:
            - mountPath: /var/lib/rabbitmq
              name: rabbitmq-data
#             subPath: postgres
      volumes:
        - name: rabbitmq-data
          persistentVolumeClaim:
            claimName: rabbitmq-pvc
