dz-1/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: dz-app-clusterip
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
  selector:
    components: frontend
