dz-1/convservice-service.yml
apiVersion: v1
kind: Service
metadata:
  name: convservice-clusterip
spec:
  type: ClusterIP
  ports:
    - port: 4000
      protocol: TCP
  selector:
    components: convservice
